test/corpus/arrays.txt
================================================================================
Empty dynamic
================================================================================
test

    {}
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (dynamic_array)))))

================================================================================
Single Element in Dynamic
================================================================================
test

    {a}
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (dynamic_array
          (identifier))))))

================================================================================
Multiple Elements in Dynamic
================================================================================
test

    {a. b. c}
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (dynamic_array
          (identifier)
          (identifier)
          (identifier))))))

================================================================================
Multiple Elements in Dynamic with trailing dot
================================================================================
test

    {a. b. c.}
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (dynamic_array
          (identifier)
          (identifier)
          (identifier))))))

================================================================================
Multiple Elements in Dynamic with multiple dot
================================================================================
test

    {. a.. b... c....}
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (dynamic_array
          (identifier)
          (identifier)
          (identifier))))))

================================================================================
Multiple Elements in Byte Array
================================================================================
test

    #[2 5 6]
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (byte_array
          (number)
          (number)
          (number))))))

================================================================================
Multiple hashtags in Byte Array
================================================================================
test

    ###[2 5 6]
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (byte_array
          (number)
          (number)
          (number))))))

================================================================================
Hex numbers in Byte Array
================================================================================
test

    #[16r55 16rAA 16r1B]
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (byte_array
          (number)
          (number)
          (number))))))

================================================================================
Multiple Elements in Literal Array
================================================================================
test

    #(1 a b 'test')
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (literal_array
          (number)
          (symbol)
          (symbol)
          (string))))))

================================================================================
Nested Elements in Literal Array
================================================================================
test

    #(1 (a b) #('test'))
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (literal_array
          (number)
          (literal_array
            (symbol)
            (symbol))
          (literal_array
            (string)))))))

================================================================================
Nested Byte Array in Literal Array
================================================================================
test

    #(#[65 66] 1 #[1 2 3])
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (literal_array
          (byte_array
            (number)
            (number))
          (number)
          (byte_array
            (number)
            (number)
            (number)))))))

================================================================================
Dot in Literal Array
================================================================================
test

    #(. + ^ :=)
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (literal_array
          (symbol)
          (symbol)
          (symbol)
          (symbol))))))

================================================================================
Keyword Symbol in Literal Array
================================================================================
test

    #(color:sees:)
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (literal_array
          (symbol))))))

================================================================================
Explicit Symbol in Literal Array
================================================================================
test

    #(#color:sees: #a)
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (literal_array
          (symbol)
          (symbol))))))

================================================================================
Multiple hashtags in Literal Array
================================================================================
test

    ####(1 a 'string')
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (literal_array
          (number)
          (symbol)
          (string))))))
