test/corpus/literals.txt
================================================================================
Identifier capitalized
================================================================================
test

    SBWatch2
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (identifier)))))

================================================================================
Identifier
================================================================================
test

    abc123
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (identifier)))))

================================================================================
String
================================================================================
test

    'abc def'
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (string)))))

================================================================================
Multiline String
================================================================================
test

    'abc
    def'
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (string)))))

================================================================================
Quotes in String
================================================================================
test

    '"' "a" + '"'

--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (binary_message
          (string)
          (comment)
          (binary_operator)
          (string))))))

================================================================================
Escaped String
================================================================================
test

    'abc '' abc '' def'
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (string)))))

================================================================================
Empty String
================================================================================
test

    ''
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (string)))))

================================================================================
Number
================================================================================
test

    123
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (number)))))

================================================================================
Number with Base
================================================================================
test

    12r123
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (number)))))

================================================================================
Hexadecimal number
================================================================================
test

    16r9A0BF
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (number)))))

================================================================================
Negative Number
================================================================================
test

    -2.3
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (number)))))

================================================================================
Negative Integer
================================================================================
test

    -2
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (number)))))

================================================================================
Number with Decimal
================================================================================
test

    2.3.
    2.4
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (number))
      (statement
        (number)))))

================================================================================
Number in scientific notation
================================================================================
test

    1.98847e30.
    2e-2
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (number))
      (statement
        (number)))))

================================================================================
Symbol
================================================================================
test

    #abc123
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (symbol)))))

================================================================================
Binary Symbol
================================================================================
test

    #++-
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (symbol)))))

================================================================================
Quoted Symbol
================================================================================
test

    #'abc123'
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (symbol
          (string))))))

================================================================================
Multiple quoted Symbol
================================================================================
test

    #'abc '' abc '' def'
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (symbol
          (string))))))

================================================================================
Empty Symbol
================================================================================
test

    #''
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (symbol
          (string))))))

================================================================================
Symbol with 2 hashtags
================================================================================
test

    ##abc
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (symbol)))))

================================================================================
Character
================================================================================
test

    $a
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (character)))))

================================================================================
Space Character
================================================================================
test

    $ 
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (character)))))

================================================================================
Dollar Character
================================================================================
test

    $$
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (character)))))

================================================================================
Return Character
================================================================================
test

    $

--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (character)))))
