test/corpus/message_sends.txt
================================================================================
Unary Message Send
================================================================================
test

    abc def
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (unary_message
          (identifier)
          (unary_identifier))))))

================================================================================
Binary Message Send
================================================================================
test

    abc + def
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (binary_message
          (identifier)
          (binary_operator)
          (identifier))))))

================================================================================
Single Keyword Message Send
================================================================================
test

    abc with: def
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (keyword_message
          (identifier)
          (keyword)
          (identifier))))))

================================================================================
Unary in Binary, unary last
================================================================================
test

    abc + def ghi
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (binary_message
          (identifier)
          (binary_operator)
          (unary_message
            (identifier)
            (unary_identifier)))))))

================================================================================
Nested Binary
================================================================================
test

    abc + def + ghi + jkl
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (binary_message
          (binary_message
            (binary_message
              (identifier)
              (binary_operator)
              (identifier))
            (binary_operator)
            (identifier))
          (binary_operator)
          (identifier))))))

================================================================================
Unary in Binary, unary first
================================================================================
test

    abc ghi + def
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (binary_message
          (unary_message
            (identifier)
            (unary_identifier))
          (binary_operator)
          (identifier))))))

================================================================================
Multiple Keyword Messages
================================================================================
test

    abc with: def do: ghi
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (keyword_message
          (identifier)
          (keyword)
          (identifier)
          (keyword)
          (identifier))))))

================================================================================
Multiple Keyword Messages with literal array
================================================================================
test

    abc with: #(1 2 3 4 5) do: ghi
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (keyword_message
          (identifier)
          (keyword)
          (literal_array
            (number)
            (number)
            (number)
            (number)
            (number))
          (keyword)
          (identifier))))))

================================================================================
Binary in Keyword Message
================================================================================
test

    abc with: def + ghi
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (keyword_message
          (identifier)
          (keyword)
          (binary_message
            (identifier)
            (binary_operator)
            (identifier)))))))

================================================================================
Multiple Sends in Keyword Message
================================================================================
test

    abc with: def + ghi do: abc
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (keyword_message
          (identifier)
          (keyword)
          (binary_message
            (identifier)
            (binary_operator)
            (identifier))
          (keyword)
          (identifier))))))

================================================================================
Multiple Binary Sends in Keyword Message
================================================================================
test

    abc with: def + ghi do: abc + tst
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (keyword_message
          (identifier)
          (keyword)
          (binary_message
            (identifier)
            (binary_operator)
            (identifier))
          (keyword)
          (binary_message
            (identifier)
            (binary_operator)
            (identifier)))))))

================================================================================
Nested Keyword Message with Parenthesis
================================================================================
test

    abc with: (def do: ghi)
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (method_body
      (statement
        (keyword_message
          (identifier)
          (keyword)
          (parenthesized_expression
            (keyword_message
              (identifier)
              (keyword)
              (identifier))))))))

================================================================================
Binary Message Send Backslash
================================================================================
test

    abc \ def
--------------------------------------------------------------------------------
